@startuml
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
    FontColor Black
    FontSize 14
}

Title "Class Diagram - Notifying Candidates"

package "presentation" {
    class NotifyCandidatesUI {
        + doShow()
        + headline()
        + buildSubject(application)
        + buildBody(application, status)
    }
}

package "application" {
    class NotifyCandidatesController {
        + findApplicationsToNotify()
        + findCandidateEmail(application)
        + checkApplicationStatus(application)
        + createEmail(candidateEmail, subject, body)
        + sendEmails(emails)
    }
}

package "services" {
    class ApplicationService {
        + registerApplication(rank, applicationFiles, jobReference, candidate, operator)
        + findApplicationById(applicationID)
        + allApplications()
        + findApplicationsForJobOpening(jobOpening)
        + updateRank(rank, application)
    }

    class EmailService {
        + createEmail(candidateEmail, subject, body)
        + sendAllEmails(emails)
    }
}

package "repositories" {
    interface ApplicationRepository {
        + allApplications()
        + ofIdentity(applicationId)
    }
}

package "domain" {
    class Application {
        + Application(rank, createdOn, applicationFiles, jobReference, candidate, operator)
        + sameAs(otherApplication)
        + equals(otherApplication)
        + hashCode()
        + compareTo(otherApplication)
        + identity()
        + rank()
        + submissionDate()
        + status()
        + dataFile()
        + operator()
        + candidate()
        + jobReference()
        + updateRank(rank)
        + toString()
    }

    class Email {
        + Email(candidateEmail, subject, body)
        + candidateEmail()
        + subject()
        + body()
    }
}

package "protocol" {
    class Jobs4UProtocol {
        + sendCommTest()
        + sendAck()
        + sendErr()
        + sendDisconnect()
        + sendAuth(email, password)
        + sendEmail(toWho, subject, body)
    }
}

NotifyCandidatesUI --> NotifyCandidatesController

NotifyCandidatesController --> ApplicationService
NotifyCandidatesController --> EmailService

ApplicationService --> ApplicationRepository
EmailService --> Email : creates
EmailService --> Jobs4UProtocol

ApplicationRepository --> Application : stores

@enduml